--- a/ADMFacturar/Views/Reportes/RInventario.cshtml
+++ b/ADMFacturar/Views/Reportes/RInventario.cshtml
@@ -33,16 +33,16 @@
 			<h2 class="text-lg font-bold mb-4">Filtro de Articulos</h2>
 			<div class="grid grid-cols-1 gap-4 sm:grid-cols-6">
 				<div class="sm:col-span-1">
-					<label for="nombre_articulo" class="block text-sm font-medium">Nombre de Articulo</label>
+					<label for="nombre_articulo" class="block text-sm font-medium leading-6 text-white">Nombre de Articulo</label>
 					<div class="mt-1">
-						<input type="text" id="nombre_articulo" name="nombre_articulo" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
+						<input type="text" id="nombre_articulo" name="nombre_articulo" class="block w-full rounded-md bg-gray-700 border-0 py-1.5 text-white focus:ring-2 focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
 					</div>
 				</div>
 			</div>
 		</div>
 	</form>
 	<!--Final de From-->
-	<div class="w-full mt-8">
+	<div class="w-full mt-8 bg-gray-800 p-6 rounded-lg shadow-lg">
 		<div class="flex justify-between items-center bg-gray-800 text-white p-4 rounded-t-lg">
 			<h3 class="text-xl font-semibold"><i class="fas fa-list mr-3"></i> Reporte de Inventario</h3>
 			<div>
@@ -52,26 +52,26 @@
 		</div>
 
 		<!--                  Tabla                        -->
-		<div class="bg-white rounded-b-lg shadow-lg overflow-hidden">
-			<table id="tablaArticulos" class="min-w-full leading-normal">
-				<thead>
-					<tr class="bg-gray-800 text-white">
-						<th class="py-3 text-center">Código de Artículo</th>
-						<th class="py-3 text-center">Descripción de Artículo</th>
-						<th class="py-3 text-center">Existencias</th>
-						<th class="py-3 text-center">Costo</th>
+		<div class="overflow-auto mt-4">
+			<table id="tablaArticulos" class="min-w-full bg-gray-800 text-white">
+				<thead class="bg-gray-900">
+					<tr>
+						<th class="py-3 px-4 text-center">Código de Artículo</th>
+						<th class="py-3 px-4 text-center">Descripción de Artículo</th>
+						<th class="py-3 px-4 text-center">Existencias</th>
+						<th class="py-3 px-4 text-center">Costo</th>
 					</tr>
 				</thead>
-				<tbody id="bodyTablaArticulos" class="text-gray-700">
+				<tbody id="bodyTablaArticulos" class="text-center">
 					@if (articulos != null)
 					{
 						@foreach (var articulo in articulos)
 						{
 							<tr class="even:bg-gray-700 hover:bg-gray-600">
-								<td class="py-3 text-center">@Html.DisplayFor(modelItem => articulo.PK_Articulo)</td>
-								<td class="py-3 text-center">@Html.DisplayFor(modelItem => articulo.Descripcion)</td>
-								<td class="py-3 text-center">@Html.DisplayFor(modelItem => articulo.Cantidad)</td>
-								<td class="py-3 text-center">@Html.DisplayFor(modelItem => articulo.Costo)</td>
+								<td class="py-3 px-4 border-b border-gray-700">@Html.DisplayFor(modelItem => articulo.PK_Articulo)</td>
+								<td class="py-3 px-4 border-b border-gray-700">@Html.DisplayFor(modelItem => articulo.Descripcion)</td>
+								<td class="py-3 px-4 border-b border-gray-700">@Html.DisplayFor(modelItem => articulo.Cantidad)</td>
+								<td class="py-3 px-4 border-b border-gray-700">@Html.DisplayFor(modelItem => articulo.Costo)</td>
 							</tr>
 						}
 					}
