--- a/ADMFacturar/Views/Marketing/Index.cshtml
+++ b/ADMFacturar/Views/Marketing/Index.cshtml
@@ -72,7 +72,7 @@
             <h3 class="text-xl font-bold mb-4 text-center">Crear Nuevo Correo</h3>
             <hr class="mb-4">
         </div>
-        <form id="emailForm" class="flex flex-col space-y-4 text-white" enctype="multipart/form-data">
+        <form id="emailForm" novalidate class="flex flex-col space-y-4 text-white" enctype="multipart/form-data">
             <div class="flex flex-col lg:flex-row justify-start items-center lg:space-x-2">
                 <div class="max-w-xs p-4 bg-gray-900 border border-gray-700 rounded-lg shadow-lg transition duration-300 transform hover:-translate-y-1 hover:scale-105 hover:bg-gray-800 cursor-pointer">
                     <div class="flex items-center" onclick="document.getElementById('fileInput').click();">
@@ -86,7 +86,7 @@
                 </div>
 
                 <div class="max-w-xs p-4 bg-gray-900 border border-gray-700 rounded-lg shadow-lg transition duration-300 transform hover:-translate-y-1 hover:scale-105 hover:bg-gray-800 cursor-pointer">
-                    <div class="flex items-center" onclick="abrirModal('modalGruposCorreo')">
+                    <div class="flex items-center" onclick="openModal()">
                         <svg class="w-6 h-6 mb-2 mr-2 text-white" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 512 512">
                             <path d="M96 0C60.7 0 32 28.7 32 64V448c0 35.3 28.7 64 64 64H384c35.3 0 64-28.7 64-64V64c0-35.3-28.7-64-64-64H96zM208 288h64c44.2 0 80 35.8 80 80c0 8.8-7.2 16-16 16H144c-8.8 0-16-7.2-16-16c0-44.2 35.8-80 80-80zm-32-96a64 64 0 1 1 128 0 64 64 0 1 1 -128 0zM512 80c0-8.8-7.2-16-16-16s-16 7.2-16 16v64c0 8.8 7.2 16 16 16s16-7.2 16-16V80zM496 192c-8.8 0-16 7.2-16 16v64c0 8.8 7.2 16 16 16s16-7.2 16-16V208c0-8.8-7.2-16-16-16zm16 144c0-8.8-7.2-16-16-16s-16 7.2-16 16v64c0 8.8 7.2 16 16 16s16-7.2 16-16V336z" />
                         </svg>
@@ -126,6 +126,36 @@
     </div>
 </div>
 
+<!-- Modal Buscar Grupo Correo -->
+<div id="modal" class="fixed inset-0 bg-gray-900 bg-opacity-75 flex items-center justify-center hidden">
+    <div class="bg-gray-800 text-white rounded-lg p-6 w-full max-w-md shadow-xl">
+        <div class="mb-6">
+            <h3 class="text-xl font-bold mb-4">Buscar Grupo de Correo</h3>
+            <div class="relative">
+                <input type="text" id="buscarGrupoCorreo" class="block w-full rounded-md py-2 px-3 bg-gray-700 text-white placeholder-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" placeholder="Buscar por grupo o correo">
+            </div>
+        </div>
+        <div class="overflow-x-auto">
+            <table class="min-w-full bg-gray-800 text-white" id="tablaGrupoCorreo">
+                <thead class="bg-gray-900">
+                    <tr>
+                        <th class="py-3 px-4 text-center">Grupo</th>
+                        <th class="py-3 px-4 text-center">Correos</th>
+                    </tr>
+                </thead>
+                <tbody class="text-center">
+                    <!-- Filas de artículos generadas dinámicamente por JavaScript -->
+                </tbody>
+            </table>
+
+        </div>
+        <div class="mt-6 flex justify-end">
+            <button type="button" class="bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-2 px-4 rounded" onclick="closeModal()">Cerrar</button>
+        </div>
+    </div>
+</div>
+<!-- Fin Modal Buscar Grupo Correo -->
+
 
 
 
@@ -134,6 +164,54 @@
 
 <!-- JavaScript para manejar SweetAlert y limpiar campos -->
 <script>
+    let productos = [];
+
+    function openModal() {
+        fetch('/Marketing/ListarGrupoCorreos')
+            .then(response => response.json())
+            .then(data => {
+                renderTable(data);
+                document.getElementById('modal').classList.remove('hidden');
+            })
+            .catch(error => {
+                console.error('Error al obtener los grupos de correos:', error);
+            });
+    }
+
+    function renderTable(data) {
+        const buscar = document.getElementById('buscarGrupoCorreo').value.toLowerCase();
+        const filteredData = data.filter(gcorreos =>
+            gcorreos.name.toLowerCase().includes(buscar) || gcorreos.correos.toLowerCase().includes(buscar)
+        );
+
+        const tableBody = document.querySelector('#tablaGrupoCorreo tbody');
+        tableBody.innerHTML = '';
+
+        filteredData.forEach(gcorreos => {
+            const row = `
+                    <tr class="even:bg-gray-700 hover:bg-gray-600 cursor-pointer" onclick="seleccionargcorreos('${gcorreos.correos}')">
+                        <td class="py-3 px-4 border-b border-gray-700">${gcorreos.name}</td>
+                        <td class="py-3 px-4 border-b border-gray-700">${gcorreos.correos}</td>
+                    </tr>
+                `;
+            tableBody.innerHTML += row;
+        });
+    }
+
+    function closeModal() {
+        document.getElementById('modal').classList.add('hidden');
+    }
+
+    function seleccionargcorreos(correos) {
+        document.querySelector('input[name="to"]').value = correos;
+        closeModal();
+        abrirModal('modalCrearCorreo');
+    }
+
+    document.getElementById('buscarGrupoCorreo').addEventListener('input', function () {
+        openModal();
+    });
+
     document.getElementById('emailForm').addEventListener('submit', function (event) {
         event.preventDefault();
 
@@ -204,7 +282,6 @@
                 console.log('Error al guardar el registro: ' + error.message);
             });
     }
-
 
     function abrirModal(modalId) {
         const modal = document.getElementById(modalId);
